src/renderer/styles/ChatBubble.css
.chat-bubble-container {
	width: 100%;
	display: flex;
	font-size: 80%;
	letter-spacing: 0.2px;
	padding: 7px 30px;
	transition: 0.2s;
	animation: slide 0.2s ease-out forwards;
	align-items: center;
	justify-content: space-between;
}

@keyframes slide {
	0% {
		opacity: 0;
		transform: translateX(-10px);
	}
	100% {
		opacity: 1;
		transform: none;
	}
}

.chat-bubble-container:hover {
	background-color: var(--highlight);
}

.chat-bubble-container:hover .message-time {
	opacity: 0.7;
}

.message-time {
	width: fit-content;
	min-width: 30px;
	text-align: end;
	font-size: 10px;
	font-weight: bold;
	opacity: 0;
	transition: 0.2s;
}

.message-author {
	font-weight: bolder;
	width: fit-content;
	transition: 0.2s;
}

/* .message-author:hover {
	opacity: 0.5;
	cursor: pointer;
} */

.message-text {
	user-select: text;
	font-weight: 500;
	cursor: default;
}

.chat-bubble-message {
	display: flex;
	align-items: center;
	gap: 10px;
}

